Edited text color of outline button.

--- a/ProjectFiles/react_files/src/App.scss
+++ b/ProjectFiles/react_files/src/App.scss
@@ -334,7 +334,7 @@ a:visited {
 }
 /* Outline */
 .btn-outline-secondary {
-    color: #1277f3 !important;
+    color: #fff !important;
     border-color: #4096ff !important;
     box-shadow: 0 1px 4px #4096ff !important;
 }
